monitoring/openshift/moodle-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: moodle
  name: moodle
spec:
  ports:
    - name: "1180"
      port: 1180
      targetPort: 8080
    - name: "1443"
      port: 1443
      targetPort: 8443
  selector:
    io.kompose.service: moodle
status:
  loadBalancer: {}
