monitoring/openshift/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: petclinic
  name: petclinic
spec:
  ports:
    - name: "1080"
      port: 1080
      targetPort: 8080
  selector:
    io.kompose.service: petclinic
status:
  loadBalancer: {}
